--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -361,12 +361,13 @@
     </div>
   </div>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/imjoy-rpc@latest/dist/imjoy-rpc.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/imjoy-rpc@0.5.46/dist/hypha-rpc-websocket.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.1.3/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   <script>
+    let customFunctions;
     function fileSelected() {
       var input = document.getElementById('fileUpload');
       var label = document.getElementById('paperclipIcon');
@@ -454,8 +455,47 @@
       });
 
       async function initializeService() {
+        customFunctions = [];
         $('.message-holder').append(spinner);
         showConnectingStatus();
+
+        if(window.self !== window.top){
+          const api = await imjoyRPC.setupRPC({name: 'BioImage.IO Chatbot'});
+          async function setup(){
+            const ij = await api.getWindow("ImageJ.JS")
+            customFunctions.push({
+              name: "runMacro",
+              schema: {
+                "type": "object",
+                "title": "RunMacro",
+                "description": "Run a macro",
+                "properties": {
+                  "macro": {
+                    "type": "string",
+                    "description": "The macro to run"
+                  },
+                  "args": {
+                    "type": "object",
+                    "description": "Arguments for the macro"
+                  }
+                }
+              },
+              async execute(macro, args){
+                try{
+                  const result = await ij.runMacro(macro, args)
+                  return result
+                }
+                catch(e){
+                  console.error(e)
+                  return e.toString()
+                }
+              }
+            })
+          }
+          // Importantly, you need to call `api.export(...)` in order to expose the api for your web application
+          api.export({'setup': setup});
+        }
+
         try {
           // get service_id from query string
           const urlParams = new URLSearchParams(window.location.search);
@@ -658,7 +698,7 @@
 
         try {
           // Call the chat function with text and image data
-          response = await svc.chat(textMessage, chat_history, user_profile, selectedChannel, statusCallback, sessionId, imageData);
+          response = await svc.chat(textMessage, chat_history, user_profile, selectedChannel, statusCallback, sessionId, imageData, customFunctions);
           console.log(response)
           chat_history.push({ role: 'user', content: textMessage });
           chat_history.push({ role: 'assistant', content: response.text });
