Preliminary implementation of storage encoding

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -396,6 +396,49 @@
       label.classList.remove('file-selected');
     }
 
+    const storage = {};
+    function encodeData(result) {
+        if (result === null || typeof result === 'string' || typeof result === 'number' || typeof result === 'boolean') {
+            return result;
+        } else if (Array.isArray(result)) {
+            return result.map(encodeData);
+        } else if (typeof result === 'object') {
+            let encodedObject = {};
+            for (let [key, value] of Object.entries(result)) {
+                encodedObject[key] = encodeData(value);
+            }
+            return encodedObject;
+        } else {
+            let key = uuidv4(); // Implement or import uuidv4 function
+            storage[key] = result;
+            return {
+                _rtype: "object",
+                reference_id: key
+            };
+        }
+    }
+
+    function decodeData(result) {
+        if (result === null || typeof result === 'string' || typeof result === 'number' || typeof result === 'boolean') {
+            return result;
+        } else if (Array.isArray(result)) {
+            return result.map(decodeData);
+        } else if (typeof result === 'object') {
+            if ('_rtype' in result && result['_rtype'] === "object") {
+                let key = result['reference_id'];
+                return storage[key];
+            } else {
+                let decodedObject = {};
+                for (let [key, value] of Object.entries(result)) {
+                    decodedObject[key] = decodeData(value);
+                }
+                return decodedObject;
+            }
+        } else {
+            return result;
+        }
+    }
+
     async function _registerExtension(extension) {
       if(!extension.name || !extension.execute || !extension.get_schema) 
         throw new Error("Invalid extension")
@@ -403,6 +446,14 @@
       if(!schema || !schema.title || schema.title.includes(" ") || !schema.description)
         throw new Error("Invalid extension schema")
 
+      const _execute = extension.execute;
+
+      extension.execute = async function(config){
+        config = decodeData(config)
+        const result = await _execute(config)
+        return encodeData(result)
+      }
+      
       extensions.push(extension);
       const container = $('#extensions-container')
       let htmlContent = `<span>Extensions:&nbsp;</span>`
@@ -479,6 +530,71 @@
             return e.toString()
           }
         }
+      })
+
+      await api.registerExtension({
+        _rintf: true,
+        name: "getImage",
+        description: "Get an image from the current window",
+        async get_schema() {
+          console.log("get schema of getImage")
+          return {
+            type: "object",
+            title: "getImage",
+            description: "Get an image from the current window",
+            properties: {
+            },
+          };
+        },
+        async execute(config) {
+          let ij = await api.getWindow("ImageJ.JS")
+          if(!ij){
+            ij = await api.createWindow({src: "https://ij.imjoy.io", name: "ImageJ.JS"})
+          }
+          const image = await ij.getImage();
+          return image;
+        },
+      })
+  
+      await api.registerExtension({
+        _rintf: true,
+        name: "showImage",
+        description: "Show an image in the current window",
+        async get_schema() {
+          return {
+            type: "object",
+            title: "showImage",
+            description: "Show an image in the current window, the input should be an image.",
+            properties: {
+              image: {
+                type: "object",
+                title: "image",
+                description: "The image to show.",
+                properties: {
+                  rtype: {
+                    type: "string",
+                    enum: ["object"],
+                  },
+                  reference_id: {
+                    type: "string",
+                    description: "The reference id of the image",
+                  },
+                },
+                required: ["rtype", "reference_id"],
+              },
+            },
+            required: ["image"],
+            allow_additional_properties: false,
+          };
+        },
+        async execute(config) {
+          let ij = await api.getWindow("ImageJ.JS")
+          if(!ij){
+            ij = await api.createWindow({src: "https://ij.imjoy.io", name: "ImageJ.JS"})
+          }
+          const image = config["image"] || config["object"];
+          await ij.viewImage(image);
+        },
       })
       return app;
     }
