--- a/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
+++ b/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
@@ -89,7 +89,7 @@ async def register_chatbot_extension(chatbot):
 
     class ModelZooInfoScript(BaseModel):
         """Create a Python Script to get information about details of models, applications, datasets, etc. in the model zoo. Remember some items in the model zoo may not have all the fields, so you need to handle the missing fields."""
-        script: str = Field(description="""The script to be executed which uses a predefined local variable 'resources' containing a list of dictionaries with all the resources in the model zoo (including models, applications, datasets etc.). The response to the query should be printed to stdout. Details about the local variable 'resources':\n""" + resource_item_stats)
+        script: str = Field(description="""The script will be exectued in Python 3 inside the browser via Pyodide (which uses await micropip.install to load new modules). The script to be executed which uses a predefined local variable 'resources' containing a list of dictionaries with all the resources in the model zoo (including models, applications, datasets etc.). The response to the query should be printed to stdout. Details about the local variable 'resources':\n""" + resource_item_stats)
         request: str = Field(description="The user's detailed request")
         user_info: Optional[str] = Field("", description="Brief user info summary including name, background, etc., for personalizing responses to the user.")
 
