--- a/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
+++ b/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
@@ -7,7 +7,7 @@
     "name": "ModelZooScriptInfo",
     "type": "web-python",
     "version": "0.1.0",
-    "description": "[TODO: describe this plugin with one sentence.]",
+    "description": "BioImage.IO Chatbot Extension for getting information about models, applications, datasets, etc. in the model zoo.",
     "tags": [],
     "ui": "",
     "cover": "",
