--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -501,6 +501,28 @@
         },
       });
 
+      app.addMenuItem({
+        label: "Enable PythonConsole",
+        async callback() {
+          const uri = prompt(
+              `Please type a ImJoy plugin URL`,
+              "https://nanguage.github.io/web-python-console/chatbot-extension.imjoy.html"
+          );
+          if (uri) app.loadPlugin(uri);
+        },
+      });
+
+      app.addMenuItem({
+        label: "Enable BioengineWebClient",
+        async callback() {
+          const uri = prompt(
+              `Please type a ImJoy plugin URL`,
+              "https://bioimage-io.github.io/bioengine-web-client/chatbot-extension.imjoy.html"
+          );
+          if (uri) app.loadPlugin(uri);
+        },
+      });
+
       const api = app.imjoy.api
       app.addMenuItem({
         label: "Enable ImageJMacro",
