avoid 0 height window

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -202,6 +202,10 @@
       margin: 0 auto;
       /* Center the chat container horizontally */
     }
+    .window {
+      /* Avoid window with 0 height */
+      min-height: 220px !important;
+    }
 
 
 
