--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -561,11 +561,7 @@
       app.addMenuItem({
         label: "Enable ModelZooScript",
         async callback() {
-          const uri = prompt(
-              `Please type a ImJoy plugin URL`,
-              "https://raw.githubusercontent.com/bioimage-io/bioimageio-chatbot/main/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html"
-          );
-          if (uri) app.loadPlugin(uri);
+          await app.loadPlugin("https://raw.githubusercontent.com/bioimage-io/bioimageio-chatbot/main/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html");
         },
       });
 
