--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -558,7 +558,11 @@
         },
       });
 
-      app.addMenuItem({
+      const api = app.imjoy.api
+
+      await app.loadPlugin("https://raw.githubusercontent.com/bioimage-io/bioimageio-chatbot/main/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html");
+      
+      /*  app.addMenuItem({
         label: "Enable ModelZooScript",
         async callback() {
           await app.loadPlugin("https://raw.githubusercontent.com/bioimage-io/bioimageio-chatbot/main/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html");
@@ -586,7 +590,7 @@
           if (uri) app.loadPlugin(uri);
         },
       });
-      const api = app.imjoy.api
+      
       app.addMenuItem({
         label: "Enable ImageJMacro",
         async callback() {
@@ -693,7 +697,7 @@
           })
           await api.showMessage("ImageJMacro extension is enabled")
         },
-      });
+      });  */
       return app;
     }
 
