--- a/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
+++ b/bioimageio_chatbot/static/model-zoo-script-info-extension.imjoy.html
@@ -30,7 +30,43 @@ from imjoy import api
 from js import fetch
 from pydantic import BaseModel, Field
 from typing import Callable, Type, Optional
-    
+from typing import List, Optional, Dict, Any
+
+class ResourceType(str):
+    MODEL = "model"
+    DATASET = "dataset"
+    APPLICATION = "application"
+
+class ModelZooSearchInput(BaseModel):
+    """Search resource items such as models, applications, datasets, etc. in the model zoo and return detailed information."""
+    keywords: List[str] = Field(..., description="List of keywords to search for in the model zoo.")
+    top_k: int = Field(3, description="The maximum number of search results to return. Default is 3. Please be aware each item may contain a large amount of data.")
+    type: Optional[ResourceType] = Field(None, description="The type of resource to search for. Options include 'model', 'dataset', 'application'.")
+
+def normalize_text(text: str) -> str:
+    return text.replace('_', ' ').lower()
+
+def matches_keywords(text: str, keywords: List[str]) -> bool:
+    normalized_text = normalize_text(text)
+    return any(keyword in normalized_text for keyword in keywords)
+
+def search_item(item: Dict[str, Any], keywords: List[str]) -> bool:
+    search_fields = [item.get('name', ''), item.get('description', '')] + [tag for tag in item.get('tags', [])]
+    search_fields += [author['name'] for author in item.get('authors', [])]
+    return any(matches_keywords(field, keywords) for field in search_fields)
+
+def search(config: ModelZooSearchInput, resource_items: List[Dict[str, Any]]) -> List[Dict[str, Any]]:
+    keywords = [normalize_text(keyword) for keyword in config.keywords]
+    filtered_items = []
+    for item in resource_items:
+        if config.type and item.get('type') != config.type:
+            continue
+        if search_item(item, keywords):
+            filtered_items.append(item)
+        if len(filtered_items) == config.top_k:
+            break
+    return filtered_items
+
 async def load_model_info():
     response = await fetch("https://bioimage-io.github.io/collection-bioimage-io/collection.json")
     model_info = await response.json()
@@ -75,7 +111,6 @@ def execute_code(script, context=None):
         sys.stdout = original_stdout
         sys.stderr = original_stderr
 
-
 async def register_chatbot_extension(register):
     resource_items = await load_model_info()
     types = set()
@@ -111,6 +146,23 @@ async def register_chatbot_extension(register):
         "get_schema": get_schema,
         "execute": execute
     })
+
+    def get_search_schema():
+        return ModelZooSearchInput.schema()
+
+    async def execute_search(config: dict):
+        config = ModelZooSearchInput.parse_obj(config)
+        result = search(config, resource_items)
+        return result
+
+    await register({
+        "_rintf": True,
+        "name": "ModelZooSearch",
+        "description": ModelZooSearchInput.__doc__,
+        "get_schema": get_search_schema,
+        "execute": execute_search
+    })
+
 
 
 class ImJoyPlugin():
