Fix image.sc call error

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -1027,7 +1027,7 @@
       function appendRobotMessage(message, messageId, steps) {
         // Convert the message to HTML using the marked library
         if(steps && steps.length > 0){
-          message = message + "\n<details> <summary>🔍More Details</summary>\n\n"
+          message = message + "\n\n<details> <summary>🔍More Details</summary>\n\n"
           for(let step of steps){
             message = message + `<div class="step">${step.name}</div>\n\n\`\`\`\n\n${JSON.stringify(step.details, null, 2)}\n\n\`\`\`\n\n`
           }
